--- a/views/index.pug
+++ b/views/index.pug
@@ -50,17 +50,9 @@ div(class="page")
 
 
     div(class="resume-job-board")
-    //- h2 Resumes-Jobs Board
-    //- ul(class="resume-job-list")
-    //-     each val in [1, 2, 3, 4, 5]
-    //-         li= "Test " + val
-    //-         br
-    body
-        h1= 'Result List'
-    table
-        for result in listResult
-            tr
-                td= result.user
-                td= result.organization
-                td= result.job
-                td= result.rate
+        h2 Resumes-Jobs Board
+        if listResult
+            ul(class="resume-job-list")
+                    each match in listResult
+                        li=match.user + " " + match.organization + " " + match.job + " " + match.rate 
+                        br
