--- a/views/index.pug
+++ b/views/index.pug
@@ -54,5 +54,5 @@ div(class="page")
         if result
             ul(class="resume-job-list")
                     each match in result
-                        li=match.user + " " + match.organization + " " + match.job + " " + match.rate 
+                        li="User: " + match.user + " matches Job: " + match.job + " from Organization: " + match.organization + " with a match rate of " + match.rate 
                         br
