--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,7 @@ h2 {
 .page {
     display: flex;
     flex-direction: column;
+    align-items: stretch;
     width: 500px;
 }
 
@@ -107,7 +108,7 @@ form {
 }
 
 .resume-job-board {
-    width: 500px;
+    width: 700px;
     display: flex;
     flex-direction: column;
     align-items: center;
